--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "next": "13.1.1",
+    "rc-time-picker": "^3.7.3",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.1",
     "usehooks-ts": "^2.9.1"
