--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
+    "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.15.0",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
     "mapbox-gl": "^2.12.0",
