--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
