--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "firebase": "^9.15.0",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "js-cookie": "^3.0.1",
     "mapbox-gl": "^2.12.0",
     "next": "13.1.1",
     "rc-time-picker": "^3.7.3",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-firebaseui": "^6.0.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
     "react-redux": "^8.0.5",
