--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
+    "@sentry/nextjs": "^7.31.1",
+    "@stripe/stripe-js": "^1.46.0",
     "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
@@ -29,6 +31,7 @@
     "react-map-gl": "^7.0.20",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "stripe": "^11.7.0",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
