--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-firebaseui": "^6.0.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
