--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@stripe/stripe-js": "^1.46.0",
+    "@tanstack/react-query": "^4.24.6",
     "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
