--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
+    "react-firebase-hooks": "^5.1.1",
     "react-firebaseui": "^6.0.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
