--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
     "react-firebaseui": "^6.0.0",
+    "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
     "stripe": "^11.7.0",
