--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@stripe/stripe-js": "^1.46.0",
+    "@syncfusion/ej2-react-calendars": "^20.4.48",
     "@tanstack/react-query": "^4.24.6",
     "axios": "^1.2.2",
     "eslint": "8.30.0",
@@ -23,9 +24,7 @@
     "js-cookie": "^3.0.1",
     "mapbox-gl": "^2.12.0",
     "next": "13.1.1",
-    "rc-time-picker": "^3.7.3",
     "react": "18.2.0",
-    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
