--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "js-cookie": "^3.0.1",
     "mapbox-gl": "^2.12.0",
     "next": "13.1.1",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
-    "react-firebaseui": "^6.0.0",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
