--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
+    "react-phone-input-2": "^2.15.1",
     "stripe": "^11.7.0",
     "usehooks-ts": "^2.9.1"
   },
