--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.43.2",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
     "react-map-gl": "^7.0.20",
     "react-phone-input-2": "^2.15.1",
+    "react-social-icons": "^5.15.0",
     "stripe": "^11.7.0",
     "usehooks-ts": "^2.9.1"
   },
